--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sdb14.github.io/Portfolio2",
+  "homepage": "https://sdb14.github.io/Portfolio2",
   "name": "portfolio2",
   "version": "0.1.0",
   "private": true,
