--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{
-    "name": "Portfolio2",
+{"homepage": "http://sdb14.github.io/Portfolio2",
+  "name": "portfolio2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,9 +16,10 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,5 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
